Salesforce/main/default/main/default/objects/Votacion_balotage__c/Votacion_balotage__c.object-meta.xml
<CustomObject>
    <description>Tabla auxiliar para la segunda vuelta de votación. Con los 2 valores máximos para el caso en que participe de la segunda vuelta.</description>
    <label>Votacion_balotage</label>
    <nameField>
        <label>Votacion_balotage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Valores de votacion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>