Salesforce/main/default/main/default/objects/Votacion_balotage__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Valores de votacion</relationshipLabel>
    <relationshipName>Valores_de_votacion</relationshipName>
    <type>Lookup</type>
</CustomField>