Salesforce/main/default/main/default/objects/Votacion_balotage__c/fields/Region_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Region_Comercial__c</fullName>
    <label>Region Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUL</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>