Salesforce/main/default/main/default/objects/Votacion_balotage__c/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <description>Contiene el valor precio/volumen</description>
    <label>Variable</label>
    <length>10</length>
    <type>Text</type>
</CustomField>