Salesforce/main/default/main/default/objects/Votacion_balotage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Producto__c</columns>
    <columns>Variedad__c</columns>
    <columns>valor1__c</columns>
    <columns>valor2__c</columns>
    <columns>Variable__c</columns>
    <columns>Vuelta__c</columns>
    <columns>Region_Comercial__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>